изменил заголовок header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="header">
-        First CSS Animation
+        Carousel Animation
     </div>
     <div class="wrapper">
         <div class="carousel">
